# oc-packages

./: .gitignore  EXAMPLES.md  README.md  RENOVATE.md  package.json  renovate-global.json  renovate.json  typedoc.base.json
agent-anthropic/: CHANGELOG.md  README.md  package.json  typedoc.json
agent-cli/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts
agent-console-client/: README.md  package.json  tsconfig.json  tsup.config.ts
agent-core/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
agent-langgraph/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
agent-mcp/: CHANGELOG.md  README.md  package.json  typedoc.json
agent-openai/: CHANGELOG.md  README.md  package.json  typedoc.json
agent-signer/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
agent-vercel/: CHANGELOG.md  README.md  package.json  typedoc.json
airdrop-gate/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
auth-client/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
auth-core/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
cli/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts
design/: LICENSE  MIGRATION.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
gate/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
insights-client/: README.md  package.json  tsup.config.ts  typedoc.json
legal/: LICENSE  README.md  package.json  tsconfig.json  tsup.config.ts
lock-core/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
lock-crypto/: CHANGELOG.md  README.md  package.json  typedoc.json
lock-device/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
me-client/: README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
nostr-core/: README.md  package.json  tsup.config.ts  typedoc.json
pledge-core/: README.md  package.json  typedoc.json
react/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
relay-filter/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
scripts/: add-docs-banner.mjs  drift-check.mjs  gen-docs.mjs
sdk/: CHANGELOG.md  INTEGRATION_GUIDE.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
sdk-py/: README.md  pyproject.toml
sdk-py/orangecheck/: __init__.py  __main__.py  canonical.py  client.py  errors.py  top_level.py  types.py  verify_sig.py
sdk-py/orangecheck/pledge/: __init__.py  bond.py  canonical.py  delegation.py  envelopes.py  resolution.py  state.py
sdk-py/tests/: test_client.py  test_client_failure_modes.py  test_conformance.py
sdk-py/tests/pledge/: test_delegation.py  test_vectors.py  test_wrap.py
sdk-py/tests/vectors/: bv03.json  bv04.json  bv07.json  bv08.json  tv03.json  tv04.json  tv05.json  tv07.json  tv09.json  tv11.json  tv14.json  tv15.json  tv16.json  tv17.json  tv18.json  tv19.json  tv21.json  tv23.json
stamp-cli/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts
stamp-core/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
stamp-ots/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
ui/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
vault-cli/: CHANGELOG.md  README.md  package.json  tsup.config.ts
vault-core/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
vote-cli/: CHANGELOG.md  README.md  package.json  tsup.config.ts
vote-core/: CHANGELOG.md  README.md  package.json  tsup.config.ts  typedoc.json
vote-react/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  typedoc.json
(+454 files in other folders)
