[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "orangecheck"
version = "0.1.2"
description = "Python SDK for OrangeCheck — proof of Bitcoin stake for the open web."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OrangeCheck" }]
requires-python = ">=3.9"
keywords = [
    "bitcoin",
    "sybil-resistance",
    "bip322",
    "nostr",
    "attestation",
    "orangecheck",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://ochk.io"
Documentation = "https://ochk.io/docs"
Repository = "https://github.com/orangecheck/oc-packages"
Issues = "https://github.com/orangecheck/oc-packages/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
orangecheck = "orangecheck.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["orangecheck"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
